# gsmapp

./: .gitignore  .gitmodules  AddGitSubmodule.cmake  CMakeLists.txt  buffer.c  buffer.h  gsm.c  gsm.h  main.c  serial.c  serial.h  smartpointer.c  smartpointer.h  version.h.in
cmake/: GitVersion.cmake
